--- a/insight.html
+++ b/insight.html
@@ -306,7 +306,7 @@
                         <div class="ins-art-main-inner">
                             <a href="./blog-dtl.html" class="ins-art-main-item">
                                 <div class="ins-art-main-item-thumb">
-                                    <img src="./imgs/ins-art-thumb.jpg" alt="Port">
+                                    <img src="./imgs/ins-art-thumb.jpg?as=webp&width=200" width="600" alt="Port">
                                 </div>
                                 <div class="ins-art-main-item-content">
                                     <h3 class="heading h4 ins-art-main-item-title">
@@ -340,12 +340,12 @@
                 <span class="decor-slash"></span>
                 <div class="ft-abt">
                     <div class="ft-abt-ava hidden-tb">
-                        <img src="./imgs/ceo.jpg" alt="Syed Miftah Zeya">
+                        <img src="./imgs/ceo.jpg?as=webp&width=128" width="128" alt="Syed Miftah Zeya">
                     </div>
                     <div class="ft-abt-main">
                         <div class="ft-abt-info">
                             <div class="ft-abt-ava hidden-dk">
-                                <img src="./imgs/ceo.jpg" alt="Syed Miftah Zeya">
+                                <img src="./imgs/ceo.jpg?as=webp&width=128" width="128" alt="Syed Miftah Zeya">
                             </div>
                             <h5 class="txt txt-20 txt-med ft-abt-info-name">
                                 Syed Miftah Zeya
@@ -439,7 +439,7 @@
                     </div>
                     <div class="ft-ctc-btn-wrap">
                         <a href="https://www.linkedin.com/company/space-ship/" class="btn btn-outline btn-sm" target="_blank">
-                            <div class="txt txt-16 txt-med">linkedin</div>
+                            <div class="txt txt-16 txt-med">Linkedin</div>
                         </a>
                     </div>
                 </div>
