--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                             <path class="outArrL" d="M391.53 4.36182L403.53 9.93614L391.53 15.3618L393.93 9.93614L391.53 4.36182Z" fill="#464646"/>
                             <path class="outArrL" d="M391.53 4.36182L403.53 9.93614L391.53 15.3618L393.93 9.93614L391.53 4.36182Z" fill="#464646"/>
                         </svg>
-                        <img src="./imgs/home-hero-head-sat.png" alt="" class="home-hero-img-sat">
+                        <img src="./imgs/home-hero-head-sat.png?width=720&as=webp" width=720" alt="Satellite" class="home-hero-img-sat">
                     </div>
                     <div class="home-hero-title-wrap">
                         <span class="decor-slash"></span>
@@ -325,8 +325,8 @@
                         We're pioneers in data-driven predictive analytics for a greener and more profitable maritime industry
                     </h2>
                     <div class="home-hero-tail-img">
-                        <img src="./imgs/home-hero-tail.png" alt="" class="hidden-mb">
-                        <img src="./imgs/home-hero-tail-mb.png" alt="" class="hidden-dk">
+                        <img src="./imgs/home-hero-tail.png?width=1500&as=webp" width="1500" alt="Ship" class="hidden-mb">
+                        <img src="./imgs/home-hero-tail-mb.png?width=900&as=webp" width="900" alt="Ship" class="hidden-dk">
                     </div>
                 </div>
             </section>
@@ -357,7 +357,7 @@
                     <div class="home-part-marquee">
                         <div class="home-part-marquee-inner">
                             <a href=#" class="home-part-marquee-item">
-                                <img src="./imgs/partner/logo-part-1.png" alt="Partner">
+                                <img src="./imgs/partner/logo-part-1.png?as=webp&width=32" width="300" alt="Partner">
                             </a>
                         </div>
                     </div>
@@ -402,58 +402,6 @@
                                 </div>
                                 <p class="txt txt-20 home-prob-item-body">
                                     36% of ships don't frequently transmit their ETA, only 50% of transmitted are accurate
-                                </p>
-                            </div>
-                            <div class="swiper-slide home-prob-item">
-                                <div class="home-prob-item-title-wrap">
-                                    <h4 class="heading h6 home-prob-item-title">
-                                        Emissions Spike, Time Matters
-                                    </h4>
-                                    <div class="icon icon-64 home-prob-item-ic">
-                                        <img src="./imgs/problems/Emission.svg" alt="Icon">
-                                    </div>
-                                </div>
-                                <p class="txt txt-20 home-prob-item-body">
-                                    Higher turnaround times lead to higher emissions in the port area
-                                </p>
-                            </div>
-                            <div class="swiper-slide home-prob-item">
-                                <div class="home-prob-item-title-wrap">
-                                    <h4 class="heading h6 home-prob-item-title">
-                                        Prolonged Waits, Maritime Congestion
-                                    </h4>
-                                    <div class="icon icon-64 home-prob-item-ic">
-                                        <img src="./imgs/problems/Time.svg" alt="Icon">
-                                    </div>
-                                </div>
-                                <p class="txt txt-20 home-prob-item-body">
-                                    Longer waiting times at anchorage for other incoming ships
-                                </p>
-                            </div>
-                            <div class="swiper-slide home-prob-item">
-                                <div class="home-prob-item-title-wrap">
-                                    <h4 class="heading h6 home-prob-item-title">
-                                        Port Dwell Time
-                                    </h4>
-                                    <div class="icon icon-64 home-prob-item-ic">
-                                        <img src="./imgs/problems/Port.svg" alt="Icon">
-                                    </div>
-                                </div>
-                                <p class="txt txt-20 home-prob-item-body">
-                                    Out of the total time ships spend in ports, 38% is spent waiting for various port services
-                                </p>
-                            </div>
-                            <div class="swiper-slide home-prob-item">
-                                <div class="home-prob-item-title-wrap">
-                                    <h4 class="heading h6 home-prob-item-title">
-                                        Port Challenges: Last-Minute Changes Strain
-                                    </h4>
-                                    <div class="icon icon-64 home-prob-item-ic">
-                                        <img src="./imgs/problems/Change.svg" alt="Icon">
-                                    </div>
-                                </div>
-                                <p class="txt txt-20 home-prob-item-body">
-                                    Last minute changes are hard to accommodate for ports
                                 </p>
                             </div>
                         </div>
@@ -557,7 +505,7 @@
             <section class="home-faq">
                 <div class="container grid">
                     <div class="home-faq-img">
-                        <img src="./imgs/home-faq.jpg" alt="Dock">
+                        <img src="./imgs/home-faq.jpg?width=1000&as=webp" type="image/webp" width="1000" alt="Dock">
                     </div>
                     <div class="home-faq-content">
                         <span class="decor-slash"></span>
@@ -602,12 +550,12 @@
                 <span class="decor-slash"></span>
                 <div class="ft-abt">
                     <div class="ft-abt-ava hidden-tb">
-                        <img src="./imgs/ceo.jpg" alt="Syed Miftah Zeya">
+                        <img src="./imgs/ceo.jpg?as=webp&width=128" width="128" alt="Syed Miftah Zeya">
                     </div>
                     <div class="ft-abt-main">
                         <div class="ft-abt-info">
                             <div class="ft-abt-ava hidden-dk">
-                                <img src="./imgs/ceo.jpg" alt="Syed Miftah Zeya">
+                                <img src="./imgs/ceo.jpg?as=webp&width=128" width="128" alt="Syed Miftah Zeya">
                             </div>
                             <h5 class="txt txt-20 txt-med ft-abt-info-name">
                                 Syed Miftah Zeya
@@ -687,7 +635,7 @@
                             Head Office
                         </div>
                         <div class="ft-ctc-grp-li">
-                            <a href=#" class="ft-ctc-link" data-replace="address">
+                            <a href="https://maps.app.goo.gl/SVLbv8GHEAmfHGJA6" class="ft-ctc-link" data-replace="address">
                                 <div class="icon icon-20 ft-ctc-link-ic">
                                     <svg width="100%" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M4 4L16 9.57433L4 15L6.4 9.57432L4 4Z" fill="currentColor"/>
@@ -706,7 +654,7 @@
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.666992 2.39208C0.666992 2.0671 0.79609 1.75544 1.02588 1.52564C1.25568 1.29585 1.56735 1.16675 1.89233 1.16675H14.107C14.268 1.16649 14.4276 1.19799 14.5764 1.25946C14.7253 1.32093 14.8606 1.41116 14.9745 1.52497C15.0884 1.63879 15.1788 1.77397 15.2404 1.92276C15.3021 2.07155 15.3337 2.23103 15.3337 2.39208V14.6067C15.3338 14.7678 15.3022 14.9274 15.2407 15.0762C15.1792 15.2251 15.0889 15.3604 14.975 15.4743C14.8611 15.5882 14.7259 15.6786 14.5771 15.7402C14.4283 15.8018 14.2687 15.8335 14.1077 15.8334H1.89233C1.73136 15.8334 1.57196 15.8017 1.42326 15.7401C1.27455 15.6785 1.13944 15.5881 1.02565 15.4743C0.911857 15.3604 0.821613 15.2253 0.760074 15.0765C0.698534 14.9278 0.666905 14.7684 0.666992 14.6074V2.39208ZM6.47233 6.75875H8.45833V7.75608C8.74499 7.18275 9.47833 6.66675 10.5803 6.66675C12.693 6.66675 13.1937 7.80875 13.1937 9.90408V13.7854H11.0557V10.3814C11.0557 9.18808 10.769 8.51475 10.041 8.51475C9.03099 8.51475 8.61099 9.24075 8.61099 10.3814V13.7854H6.47233V6.75875ZM2.80566 13.6941H4.94433V6.66675H2.80566V13.6941ZM5.25033 4.37475C5.25436 4.55786 5.22177 4.73994 5.15449 4.91029C5.0872 5.08064 4.98656 5.23584 4.85848 5.36677C4.7304 5.4977 4.57746 5.60173 4.40863 5.67275C4.2398 5.74378 4.05849 5.78036 3.87533 5.78036C3.69217 5.78036 3.51085 5.74378 3.34202 5.67275C3.17319 5.60173 3.02025 5.4977 2.89217 5.36677C2.76409 5.23584 2.66345 5.08064 2.59617 4.91029C2.52888 4.73994 2.49629 4.55786 2.50033 4.37475C2.50824 4.01532 2.65658 3.67328 2.91358 3.42187C3.17058 3.17047 3.51581 3.02969 3.87533 3.02969C4.23484 3.02969 4.58007 3.17047 4.83707 3.42187C5.09407 3.67328 5.24241 4.01532 5.25033 4.37475Z" fill="currentColor"/>
                                 </svg>
                             </div>
-                            <div class="txt txt-16 txt-med">linkedin</div>
+                            <div class="txt txt-16 txt-med">Linkedin</div>
                         </a>
                     </div>
                 </div>
