--- a/solution.html
+++ b/solution.html
@@ -9,6 +9,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon.png">
     <meta name="description" content="Transforming Maritime Operations">
     <link rel="stylesheet" href="./css/main.scss">
+    <link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/Poppins-Bold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/Aeonik-Regular.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/Aeonik-Medium.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/Aeonik-Bold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/Georgia Italic.woff" as="font" type="font/woff" crossorigin>
 </head>
 <body>
     <div class="wrapper" data-barba="wrapper">
