--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta property="og:site_name" content="Spaceship"/>
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon.png">
     <meta name="description" content="Transforming Maritime Operations">
+    <link rel="preload" href="./css/main.scss" as="style"/>
     <link rel="stylesheet" href="./css/main.scss">
+    <link rel="preload" href="./imgs/home-hero-head-sat.png?width=600&as=webp" as="image">
     <link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="./fonts/Poppins-Bold.woff" as="font" type="font/woff" crossorigin>
