--- a/term.html
+++ b/term.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon.png">
     <meta name="description" content="Transforming Maritime Operations">
     <link rel="stylesheet" href="./css/main.scss">
+    <link rel="preload" href="./imgs/home-hero-head-sat.png?width=600&as=webp" as="image">
     <link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="./fonts/Poppins-Bold.woff" as="font" type="font/woff" crossorigin>
