--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
                         We're pioneers in data-driven predictive analytics for a greener and more profitable maritime industry
                     </h2>
                     <div class="home-hero-tail-img">
-                        <img src="./imgs/home-hero-tail.png?width=1200&as=webp" width="1200" alt="Ship" class="hidden-mb">
-                        <img src="./imgs/home-hero-tail-mb.png?width=700&as=webp" width="700" alt="Ship" class="hidden-dk">
+                        <img src="./imgs/home-hero-tail.png?width=1200&as=webp" loading="lazy" width="1200" alt="Ship" class="hidden-mb">
+                        <img src="./imgs/home-hero-tail-mb.png?width=700&as=webp" loading="lazy" width="700" alt="Ship" class="hidden-dk">
                     </div>
                 </div>
             </section>
@@ -514,7 +514,7 @@
             <section class="home-faq">
                 <div class="container grid">
                     <div class="home-faq-img">
-                        <img src="./imgs/home-faq.jpg?width=900&as=webp" type="image/webp" width="900" alt="Dock">
+                        <img src="./imgs/home-faq.jpg?width=900&as=webp" type="image/webp" loading="lazy" width="900" alt="Dock">
                     </div>
                     <div class="home-faq-content">
                         <span class="decor-slash"></span>
