--- a/404.html
+++ b/404.html
@@ -338,11 +338,6 @@
                         </div>
                         <div class="ft-ctc-grp-li">
                             <a href="https://maps.app.goo.gl/SVLbv8GHEAmfHGJA6" class="ft-ctc-link" data-replace="address">
-                                <div class="icon icon-20 ft-ctc-link-ic">
-                                    <svg width="100%" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M4 4L16 9.57433L4 15L6.4 9.57432L4 4Z" fill="currentColor"/>
-                                    </svg>
-                                </div>
                                 <div class="heading h6 ft-ctc-link-txt ft-ctc-link-txt-add">
                                     A1.22, Agnes-Pockels-Bogen 1, 80992 Munich, Germany
                                 </div>
@@ -397,7 +392,7 @@
                             </li>
                             <li class="ft-menu-link">
                                 <a href="./about.html#Careers" class="heading h5 ft-menu-link-txt" data-link="career">
-                                    Career
+                                    Careers
                                     <div class="line">
                                         <div class="line-inner"></div>
                                     </div>
