update sol reversed

--- a/solution.html
+++ b/solution.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solution | SpaceShip</title>
-    <meta property="og:image" content="#"/>
+        <meta property="og:image" content="https://s3.ap-southeast-1.amazonaws.com/assets.bearplus.io/videos/spaceship-og.jpg"/>
+
     <meta property="og:site_name" content="Spaceship"/>
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon.png">
     <meta name="description" content="Transforming Maritime Operations">
