--- a/index.html
+++ b/index.html
@@ -730,6 +730,7 @@
         </footer>
         <a href="./404.html" class="link-hidden"></a>
     </div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DB80S5P4S"></script>
     <script src="./js/index.js" type="module"></script>
 </body>
 </html>
