--- a/insight.html
+++ b/insight.html
@@ -519,6 +519,7 @@
             </div>
         </footer>
     </div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DB80S5P4S"></script>
     <script src="./js/index.js" type="module"></script>
 </body>
 </html>
