--- a/index.html
+++ b/index.html
@@ -101,8 +101,14 @@
         <div class="cursor">
             <div class="cursor-wrap">
                 <div class="cursor-inner">
+                    <div class="icon icon-14 cursor-ic left">
+                        <img src="./imgs/ic-carret-left.svg" alt="Icon left">
+                    </div>
                     <div class="txt txt-16 cursor-txt">
                         Drag
+                    </div>
+                    <div class="icon icon-14 cursor-ic right">
+                        <img src="./imgs/ic-carret-left.svg" alt="Icon left">
                     </div>
                 </div>
             </div>
@@ -469,7 +475,7 @@
                         <div class="home-tech-btn-wrap hidden-mb">
                             <a href="./solution.html" class="btn btn-outline">
                                 <div class="txt txt-16 txt-med">
-                                    Discover How it works
+                                    Discover how it works
                                 </div>
                             </a>
                         </div>
