--- a/insight.html
+++ b/insight.html
@@ -217,8 +217,14 @@
         <div class="cursor">
             <div class="cursor-wrap">
                 <div class="cursor-inner">
+                    <div class="icon icon-14 cursor-ic left">
+                        <img src="./imgs/ic-carret-left.svg" alt="Icon left">
+                    </div>
                     <div class="txt txt-16 cursor-txt">
                         Drag
+                    </div>
+                    <div class="icon icon-14 cursor-ic right">
+                        <img src="./imgs/ic-carret-left.svg" alt="Icon left">
                     </div>
                 </div>
             </div>
