update video host s3

--- a/about.html
+++ b/about.html
@@ -620,7 +620,7 @@
             </div>
             <div class="ft-bg">
                 <video muted preload loop autoplay playsinline class="vid-bg">
-                    <source src="./imgs/ft-bg.mp4" type="video/mp4">
+                    <source src="https://s3.ap-southeast-1.amazonaws.com/assets.bearplus.io/videos/ft-bg.mp4" type="video/mp4">
                 </video>
             </div>
         </footer>
