--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="lang-wrap">
             <p class="lang-curr">Language</p>
             <div class="lang-drop">
-                <a href="#" class="lang-drop-item" data-lang="en-us">English</a>
-                <a href="#" class="lang-drop-item" data-lang="es-es">Spanish</a>
+                <a href="#" class="lang-drop-item" data-lang="en">English</a>
+                <a href="#" class="lang-drop-item" data-lang="es">Spanish</a>
             </div>
         </div>
         <header class="header">
