--- a/solution.html
+++ b/solution.html
@@ -24,13 +24,7 @@
 
 <body>
     <div class="wrapper" data-barba="wrapper">
-        <div class="lang-wrap">
-            <p class="lang-curr">Language</p>
-            <div class="lang-drop">
-                <a href="#" class="lang-drop-item" data-lang="en">English</a>
-                <a href="#" class="lang-drop-item" data-lang="es">Spanish</a>
-            </div>
-        </div>
+        
         <header class="header">
             <div class="container grid">
                 <div class="header-logo">
@@ -498,7 +492,7 @@
                 </div>
                 <div class="ft-ctc">
                     <div class="ft-ctc-grp">
-                        <div class="txt txt-20 txt-med ft-ctc-grp-label">
+                        <div class="txt txt-20 txt-med ft-ctc-grp-label contactus">
                             Contact us
                         </div>
                         <div class="ft-ctc-grp-li">
@@ -527,7 +521,7 @@
                         </div>
                     </div>
                     <div class="ft-ctc-grp">
-                        <div class="txt txt-20 txt-med ft-ctc-grp-label">
+                        <div class="txt txt-20 txt-med ft-ctc-grp-label headoffice">
                             Head Office
                         </div>
                         <div class="ft-ctc-grp-li">
