--- a/imprint.html
+++ b/imprint.html
@@ -85,9 +85,7 @@
                     <div class="header-act">
                         <div class="header-lang-wrap">
                             <a href="#" class="txt txt-16 header-lang-open" data-lang-toggle="open">
-                                <p data-lang-nav="en" class="header-lang-open-txt">EN</p>
-                                <p data-lang-nav="es" class="header-lang-open-txt">ES</p>
-                                <p data-lang-nav="ab" class="header-lang-open-txt">AB</p>
+                                <p class="header-lang-open-txt">EN</p>
                                 <div class="header-lang-open-ic-wrap">
                                     <svg class="header-lang-open-ic down" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 7" fill="none">
                                         <path d="M9.14844 1.5L5.14844 5.5L1.14844 1.5" stroke="#454545" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -100,7 +98,7 @@
                             <div class="txt txt-16 header-lang-popup">
                                 <a href="#" data-lang="en" class="header-lang-popup-txt txt-med">English</a>
                                 <a href="#" data-lang="es" class="header-lang-popup-txt txt-med">Spanish</a>
-                                <a href="#" data-lang="ab" class="header-lang-popup-txt txt-med">Arabic</a>
+
                                 <svg class="header-lang-popup-ic" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 10" fill="none">
                                     <path d="M0.199805 0.600097L9.7998 5.05956L0.199805 9.4001L2.11981 5.05956L0.199805 0.600097Z" fill="#292929"/>
                                 </svg>
