--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
                     <div class="header-act">
                         <div class="header-lang-wrap">
                             <a href="#" class="txt txt-16 header-lang-open" data-lang-toggle="open">
-                                <p data-lang-nav="en" class="header-lang-open-txt">EN</p>
-                                <p data-lang-nav="es" class="header-lang-open-txt">ES</p>
-                                <p data-lang-nav="ab" class="header-lang-open-txt">AB</p>
+                                <p class="header-lang-open-txt">EN</p>
                                 <div class="header-lang-open-ic-wrap">
                                     <svg class="header-lang-open-ic down" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 7" fill="none">
                                         <path d="M9.14844 1.5L5.14844 5.5L1.14844 1.5" stroke="#454545" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -99,7 +97,6 @@
                             <div class="txt txt-16 header-lang-popup">
                                 <a href="#" data-lang="en" class="header-lang-popup-txt txt-med">English</a>
                                 <a href="#" data-lang="es" class="header-lang-popup-txt txt-med">Spanish</a>
-                                <a href="#" data-lang="ab" class="header-lang-popup-txt txt-med">Arabic</a>
                                 <svg class="header-lang-popup-ic" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 10" fill="none">
                                     <path d="M0.199805 0.600097L9.7998 5.05956L0.199805 9.4001L2.11981 5.05956L0.199805 0.600097Z" fill="#292929"/>
                                 </svg>
@@ -651,24 +648,6 @@
                                 <p class="txt txt-20 home-tech-item-body">
                                     Our advanced satellites drive maritime innovation, enabling precise tracking and
                                     environmental monitoring.
-                                </p>
-                            </div>
-                            <div class="home-tech-item">
-                                <h4 class="heading h6 home-tech-item-title">
-                                    Cutting-edge AI algorithms
-                                </h4>
-                                <p class="txt txt-20 home-tech-item-body">
-                                    Our AI algorithms optimize operations and decision-making, setting new industry
-                                    standards.
-                                </p>
-                            </div>
-                            <div class="home-tech-item">
-                                <h4 class="heading h6 home-tech-item-title">
-                                    Real-time data sources
-                                </h4>
-                                <p class="txt txt-20 home-tech-item-body">
-                                    Live data feeds power our solutions, enabling informed, safe, and sustainable
-                                    decisions.
                                 </p>
                             </div>
                         </div>
