--- a/solution.html
+++ b/solution.html
@@ -83,6 +83,26 @@
                         </ul>
                     </div>
                     <div class="header-act">
+                        <div class="header-lang-wrap">
+                            <a href="#" class="txt txt-16 header-lang-open" data-lang-toggle="open">
+                                <p class="header-lang-open-txt">EN</p>
+                                <div class="header-lang-open-ic-wrap">
+                                    <svg class="header-lang-open-ic down" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 7" fill="none">
+                                        <path d="M9.14844 1.5L5.14844 5.5L1.14844 1.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                    <svg class="header-lang-open-ic up" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 7" fill="none">
+                                        <path d="M9.14844 1.5L5.14844 5.5L1.14844 1.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
+                            </a>
+                            <div class="txt txt-16 header-lang-popup">
+                                <a href="#" data-lang="en" class="header-lang-popup-txt txt-med">English</a>
+                                <a href="#" data-lang="es" class="header-lang-popup-txt txt-med">Spanish</a>
+                                <svg class="header-lang-popup-ic" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 10" fill="none">
+                                    <path d="M0.199805 0.600097L9.7998 5.05956L0.199805 9.4001L2.11981 5.05956L0.199805 0.600097Z" fill="#292929"/>
+                                </svg>
+                            </div>
+                        </div>
                         <div class="header-btn-wrap">
                             <a href="#" class="btn" data-popup="open">
                                 <div class="txt txt-16 txt-btn txt-med">Get in touch</div>
@@ -98,6 +118,26 @@
                         </svg </a>
                 </div>
                 <div class="header-toggle">
+                    <div class="header-lang-wrap">
+                        <a href="#" class="txt txt-16 header-lang-open" data-lang-toggle="open">
+                            <p class="header-lang-open-txt">EN</p>
+                            <div class="header-lang-open-ic-wrap">
+                                <svg class="header-lang-open-ic down" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 7" fill="none">
+                                    <path d="M9.14844 1.5L5.14844 5.5L1.14844 1.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                                <svg class="header-lang-open-ic up" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 7" fill="none">
+                                    <path d="M9.14844 1.5L5.14844 5.5L1.14844 1.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </a>
+                        <div class="txt txt-16 header-lang-popup">
+                            <a href="#" data-lang="en" class="header-lang-popup-txt txt-med">English</a>
+                            <a href="#" data-lang="es" class="header-lang-popup-txt txt-med">Spanish</a>
+                            <svg class="header-lang-popup-ic" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 10 10" fill="none">
+                                <path d="M0.199805 0.600097L9.7998 5.05956L0.199805 9.4001L2.11981 5.05956L0.199805 0.600097Z" fill="#292929"/>
+                            </svg>
+                        </div>
+                    </div>
                     <a href="#" class="icon icon-24 header-toggle-link">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M19.5 16.5H4.5" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10"
