--- a/imprint.html
+++ b/imprint.html
@@ -175,8 +175,8 @@
                         </h3>
                         <div class="popup-info-inner hidden-mb">
                             <div class="popup-info-item">
-                                <div class="txt txt-18 txt-med popup-info-item-label">
-                                    Support
+                                <div class="txt txt-18 txt-med popup-info-item-label support">
+                                    Call us
                                 </div>
                                 <a href="mailto:info@space-ship.world" class="txt txt-18 popup-info-item-link"
                                     data-replace="email">
@@ -184,7 +184,7 @@
                                 </a>
                             </div>
                             <div class="popup-info-item">
-                                <div class="txt txt-18 txt-med popup-info-item-label">
+                                <div class="txt txt-18 txt-med popup-info-item-label callus">
                                     Call us
                                 </div>
                                 <a href="tel:+49 151 66113142" class="txt txt-18 popup-info-item-link"
@@ -239,7 +239,7 @@
                                     </div>
                                 </div>
                                 <div class="popup-input-grp textarea-grp">
-                                    <label for="fname" class="txt txt-14 txt-med popup-input-label">
+                                    <label for="fname" class="txt txt-14 txt-med popup-input-label message">
                                         Message <span class="txt-opt">(Optional)</span>
                                     </label>
                                     <textarea type="text" name="message" class="txt txt-16 popup-input-field"
