--- a/about.html
+++ b/about.html
@@ -114,7 +114,8 @@
                                 stroke-linecap="round" stroke-linejoin="round" />
                             <path d="M4.5 4.5L19.5 19.5" stroke="white" stroke-width="1.5" stroke-miterlimit="10"
                                 stroke-linecap="round" stroke-linejoin="round" />
-                        </svg </a>
+                        </svg>
+                    </a>
                 </div>
                 <div class="header-toggle">
                     <div class="header-lang-wrap">
