--- a/blog-dtl.html
+++ b/blog-dtl.html
@@ -561,7 +561,7 @@
             </div>
             <div class="ft-bg">
                 <video muted preload loop autoplay playsinline class="vid-bg">
-                    <source src="https://s3.ap-southeast-1.amazonaws.com/assets.bearplus.io/videos/ft-bg.mp4"
+                    <source src="https://cdnwf.bear.plus/spaceship/ft-bg.mp4"
                         type="video/mp4">
                 </video>
             </div>
