--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                 </div>
                 <div class="home-sol-bg">
                     <video muted preload loop autoplay playsinline class="vid-bg">
-                        <source src="https://s3.ap-southeast-1.amazonaws.com/assets.bearplus.io/videos/home-sol-bg.mp4"
+                        <source src="https://cdnwf.bear.plus/spaceship/home-sol-bg.mp4"
                             type="video/mp4">
                     </video>
                 </div>
@@ -913,7 +913,7 @@
             </div>
             <div class="ft-bg">
                 <video muted preload loop autoplay playsinline class="vid-bg">
-                    <source src="https://s3.ap-southeast-1.amazonaws.com/assets.bearplus.io/videos/ft-bg.mp4"
+                    <source src="https://cdnwf.bear.plus/spaceship/ft-bg.mp4"
                         type="video/mp4">
                 </video>
             </div>
