update s3 to cdn

--- a/term.html
+++ b/term.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | Spaceship</title>
     <meta property="og:image"
-        content="https://s3.ap-southeast-1.amazonaws.com/assets.bearplus.io/videos/spaceship-og.jpg" />
+        content="https://cdnwf.bear.plus/spaceship/OG.jpg" />
 
     <meta property="og:site_name" content="Spaceship" />
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon.png">
